--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/handsontable/hyperformula/issues"
   },
   "author": "Handsoncode <hello@handsontable.com>",
-  "version": "2.3.0-beta.3",
+  "version": "3.0.0",
   "keywords": [
     "formula",
     "spreadsheet",
