--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "registry": "https://npm.pkg.github.com/"
   },
   "author": "Handsoncode <hello@handsontable.com>",
-  "version": "5.0.1",
+  "version": "5.0.2-beta.0",
   "keywords": [
     "formula",
     "spreadsheet",
